sdk/lib/driver/runtime/include/lib/fdf/dispatcher.h

__BEGIN_CDECLS
typedef struct fdf_dispatcher fdf_dispatcher_t;
typedef struct fdf_dispatcher_shutdown_observer fdf_dispatcher_shutdown_observer_t;
typedef void(fdf_dispatcher_shutdown_handler_t)(fdf_dispatcher_t* dispatcher,
                                                fdf_dispatcher_shutdown_observer_t* observer);
struct fdf_dispatcher_shutdown_observer {
  fdf_dispatcher_shutdown_handler_t* handler;
};
zx_status_t fdf_dispatcher_create(uint32_t options, const char* name, size_t name_len,
                                  const char* scheduler_role, size_t scheduler_role_len,
                                  fdf_dispatcher_shutdown_observer_t* observer,
                                  fdf_dispatcher_t** out_dispatcher);
async_dispatcher_t* fdf_dispatcher_get_async_dispatcher(fdf_dispatcher_t* dispatcher);
fdf_dispatcher_t* fdf_dispatcher_downcast_async_dispatcher(async_dispatcher_t* async_dispatcher);
fdf_dispatcher_t* fdf_dispatcher_get_current_dispatcher(void);
uint32_t fdf_dispatcher_get_options(const fdf_dispatcher_t* dispatcher);
void fdf_dispatcher_shutdown_async(fdf_dispatcher_t* dispatcher);
void fdf_dispatcher_destroy(fdf_dispatcher_t* dispatcher);
zx_status_t fdf_dispatcher_seal(fdf_dispatcher_t* dispatcher, uint32_t option);
fdf_dispatcher_t* fdf_dispatcher_get_always_on_dispatcher(fdf_dispatcher_t* dispatcher)
    ZX_AVAILABLE_SINCE(NEXT);
zx_status_t fdf_dispatcher_register_wake_vector(fdf_dispatcher_t* dispatcher, zx_handle_t handle,
                                                zx_signals_t signals) ZX_AVAILABLE_SINCE(NEXT);
zx_status_t fdf_dispatcher_unregister_wake_vector(fdf_dispatcher_t* dispatcher, zx_handle_t handle,
                                                  zx_signals_t signals) ZX_AVAILABLE_SINCE(NEXT);