sdk/lib/driver/runtime/include/lib/fdf/arena.h

__BEGIN_CDECLS
typedef struct fdf_arena fdf_arena_t;
typedef uint32_t fdf_arena_tag_t;
zx_status_t fdf_arena_create(uint32_t options, fdf_arena_tag_t tag, fdf_arena_t** out_arena);
void* fdf_arena_allocate(fdf_arena_t* arena, size_t bytes);
void fdf_arena_free(fdf_arena_t* arena, void* ptr);
bool fdf_arena_contains(fdf_arena_t* arena, const void* ptr, size_t num_bytes);
void fdf_arena_add_ref(fdf_arena_t* arena);
void fdf_arena_drop_ref(fdf_arena_t* arena);