sdk/lib/driver/runtime/include/lib/fdf/channel.h

__BEGIN_CDECLS
struct fdf_channel_read;
zx_status_t fdf_channel_create(uint32_t options, fdf_handle_t* out0, fdf_handle_t* out1);
zx_status_t fdf_channel_write(fdf_handle_t channel, uint32_t options, fdf_arena_t* arena,
                              void* data, uint32_t num_bytes, zx_handle_t* handles,
                              uint32_t num_handles);
zx_status_t fdf_channel_read(fdf_handle_t channel, uint32_t options, fdf_arena_t** out_arena,
                             void** out_data, uint32_t* out_num_bytes, zx_handle_t** out_handles,
                             uint32_t* out_num_handles);
zx_status_t fdf_channel_wait_async(struct fdf_dispatcher* dispatcher,
                                   struct fdf_channel_read* channel_read, uint32_t options);
zx_status_t fdf_channel_cancel_wait(fdf_handle_t handle);
zx_status_t fdf_channel_call(fdf_handle_t handle, uint32_t options, zx_time_t deadline,
                             const fdf_channel_call_args_t* args);